--- a/resources.qrc
+++ b/resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/sounds">
-        <file>sounds/move.wav</file>
-        <file>sounds/capture.wav</file>
+        <file>sounds/move.mp3</file>
+        
     </qresource>
 
     <!-- 新增 images 資源 (請把對應檔案放到專案 images/ 目錄) -->
